Added all the default syslogd log handlers to Yolk.Log.
The result of this was a slew of new configuration settings, and while
I was messing around with those, I decided to move the core config.ini
file to extras/config.ini.dist. This means that there's no longer a
config.ini file in demo/exe/configuration. Users will have to copy the
extras/config.ini.dist file manually.

The rc.yolk script was also moved from demo/tools/ to extras/

--- a/demo/INSTALL
+++ b/demo/INSTALL
@@ -6,7 +6,8 @@ Building the Yolk demo is as simple as:
     $ make
 
 And that's all. You now have a fully functioning Yolk application in the exe/
-directory. Be sure to adjust the exe/configuration/* config files to match your
+directory. Be sure to copy the config.ini.dist file from extras/ to the demo
+exe/configuration/ directory and adjust both the config files to match your
 setup.
 
 You can build a debug version of the demo with:
