--- a/docs/yolk.lyx
+++ b/docs/yolk.lyx
@@ -69,7 +69,7 @@ Yolk Manual
 \end_layout
 
 \begin_layout Date
-Revised January 6th.
+Revised May 25th.
  2012
 \end_layout
 
@@ -2503,20 +2503,23 @@ configuration/config.ini
  This path is of course relative to the application.
  There's a fully commented 
 \emph on
+config.ini.dist
+\emph default
+ file available in the 
+\emph on
+extras/
+\emph default
+ directory.
+ The only way to avoid having 
+\emph on
 config.ini
 \emph default
- file available in 
+ in the 
 \emph on
-demo/exe/configuration/
+configuration/
 \emph default
-.
- This setup is required if you're using Yolk, and the only way to avoid
- having 
-\emph on
-config.ini
-\emph default
- in the mentioned directory is if you manually change the path in the source
- file before compiling Yolk.
+ directory is if you manually change the path in the source file before
+ compiling Yolk.
 \end_layout
 
 \begin_layout Standard
@@ -3905,8 +3908,9 @@ It contains the two callback procedures used to write AWS logging data (access
 \end_layout
 
 \begin_layout Enumerate
-It creates the SQL, Error and Info trace handles, and activates them according
- to the values defined in the configuration file.
+It creates the SQL, SQL_Cache, SQL_Error, SQL_Select, Alert, Critical, Debug,
+ Emergency, Error, Info, Notice and Warning trace handles, and activates
+ them according to the values defined in the configuration file.
 \end_layout
 
 \begin_layout Standard
@@ -4011,6 +4015,12 @@ Trace
 Trace
 \emph default
  calls from the code if you don't use them.
+\end_layout
+
+\begin_layout Standard
+Note that on many systems the Emergency messages are written to console,
+ so be cautious about using this specific level, unless you've made certain
+ that you can get to the messages.
 \end_layout
 
 \begin_layout Section
@@ -4127,7 +4137,7 @@ Yolk.Process_Control
  You also get a PID file placed next to your executable, which coupled with
  the 
 \emph on
-demo/tools/rc.yolk
+extras/rc.yolk
 \emph default
  script gives you a rather nice and simple way of starting and stopping
  your application.
