--- a/docs/yolk.tex
+++ b/docs/yolk.tex
@@ -34,7 +34,7 @@
 \title{Yolk Manual}
 
 
-\date{Revised January 6th. 2012}
+\date{Revised May 25th. 2012}
 
 \maketitle
 \newpage{}
@@ -702,11 +702,11 @@ package Config is new Config_File_Parser
 
 As you can see, it is required that there's a configuration file found
 in \emph{configuration/config.ini}. This path is of course relative
-to the application. There's a fully commented \emph{config.ini} file
-available in \emph{demo/exe/configuration/}. This setup is required
-if you're using Yolk, and the only way to avoid having \emph{config.ini}
-in the mentioned directory is if you manually change the path in the
-source file before compiling Yolk.
+to the application. There's a fully commented \emph{config.ini.dist}
+file available in the \emph{extras/} directory. The only way to avoid
+having \emph{config.ini} in the \emph{configuration/} directory is
+if you manually change the path in the source file before compiling
+Yolk.
 
 I recommend taking a look at the Yolk demo application to see how
 the \emph{Yolk.Configuration} package is used.
@@ -1065,8 +1065,10 @@ This package serves two purposes:
 \begin{enumerate}
 \item It contains the two callback procedures used to write AWS logging
 data (access and error) to syslogd.
-\item It creates the SQL, Error and Info trace handles, and activates them
-according to the values defined in the configuration file.
+\item It creates the SQL, SQL\_Cache, SQL\_Error, SQL\_Select, Alert, Critical,
+Debug, Emergency, Error, Info, Notice and Warning trace handles, and
+activates them according to the values defined in the configuration
+file.
 \end{enumerate}
 Out of the box, a Yolk application requires a running syslogd daemon,
 as all log data is sent to syslogd. If for some reason you don't want
@@ -1099,6 +1101,10 @@ Yolk.Log.Trace (Handle  => Error,
 If you haven't activated a trace handle, then calling \emph{Trace}
 for that handle does nothing, ie. you don't have to remove all your
 \emph{Trace} calls from the code if you don't use them.
+
+Note that on many systems the Emergency messages are written to console,
+so be cautious about using this specific level, unless you've made
+certain that you can get to the messages.
 
 
 \section{Yolk.Not\_Found}
@@ -1134,7 +1140,7 @@ See the \emph{demo/src/my\_handlers.adb} file for more information.
 With \emph{Yolk.Process\_Control} you get the ability to control your
 application using the SIGINT, SIGPWR and SIGTERM signals. You also
 get a PID file placed next to your executable, which coupled with
-the \emph{demo/tools/rc.yolk} script gives you a rather nice and simple
+the \emph{extras/rc.yolk} script gives you a rather nice and simple
 way of starting and stopping your application.
 
 
